style.css
/* TODO:
    > Convert 'px' to 'rem' where need be (likely widths/heights)
*/

/* Normal */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat"),
    url("/fonts/montserrat/Montserrat-VariableFont_wght.ttf") format("truetype");
    /* Displays text in a fallback font if Montserrat is downloading; enhances usability on slow connections */
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/At-rules/@font-face/font-display#syntax */
    font-display: swap;
}

/* Italic */
@font-face {
    font-family: "Montserrat";
    src: local("Montserrat Italic"), local("Montserrat-Italic"),
    url("/fonts/montserrat/Montserrat-Italic-VariableFont_wght.ttf") format("truetype");
    font-style: italic;
    font-display: swap;
}


/* TODO: Check if these properties should be included under body rather than wildcard */
* {
    /* 1200px (desktop PSD) / 16px (1rem default) = 75 */
    --max-content-width: 75rem;

    /* Font sizes; 36px, 24px, 16px (all scalable) */
    --fs-lg: 2.25rem;
    --fs-md: 1.5rem;
    --fs-sm: 1rem;

    /* Override default margins put in place by certain browser stylesheets */
    margin: 0;

    font-family: "Montserrat", sans-serif;
}

body {
    min-width: 30rem;
}

a {
    color: black;
    text-decoration: none;
}

button {
    background-color: #202020;

    color: white;
    font-weight: bold;

    border-style: none;
    border-radius: 3px;

    padding: 0.5em 1.5em;
}

.underline-stylised {
    position: relative;
    font-weight: bold;
}

.underline-stylised::after {
    content: "";
    position: absolute;
    inset: auto 0 -18px 0;
    height: 18px;

    background-image: url("assets/img/underline.png");
    background-repeat: no-repeat;
    /* Stretch to width of text */
    background-size: 100% 100%;
}


/*************************
 *    HEADER & FOOTER    *
 *************************/
header, footer {
    width: 100%;

    color: white;

    /* Vertical centering */
    display: flex;
}

.header-content, .footer-content {
    width: 100%;
    max-width: var(--max-content-width);

    font-size: var(--fs-sm);

    display: flex;
}

header {
    height: 1.8rem;
    background-color: #b81d21;
}

.header-content {
    justify-content: end;
    gap: 0.5rem;

    /* Vertical centering, right margin to account for scroll bar */
    margin: auto 1rem auto auto;
}

footer {
    background-color: #202020;
    border-top: #b81d21 solid 5px;
}

.footer-content {
    text-align: center;
    font-weight: bold;

    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
    column-gap: 3em;

    padding: 1rem 1rem;
    margin: auto;
}

/* Horizontally-centered wrapping */
@media (max-width: 37rem) {
    .footer-content {
        flex-direction: column;
    }
}


/****************
 *    NAVBAR    *
 ****************/
.navbar-container {
    /* CARA logo 113px tall, 113/16 = 7.06, rounded down */
    height: 7rem;
    width: 100%;

    position: absolute;
    /* Header height, to offset navbar */
    top: 1.8rem;
    z-index: 100;

    display: flex;
    justify-content: center;

    background-color: white;
    box-shadow: 0 20px 27px -27px;
}

.navbar-content {
    width: 100%;
    max-width: var(--max-content-width);

    font-weight: bold;
    font-size: var(--fs-sm);

    /* Prevent link text (ABOUT US, etc.) from wrapping */
    white-space: nowrap;

    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 2rem;
}

/* Toggled in JS via an Intersection Observer, based on <header> visibility */
.navbar-stickifier {
    position: fixed;
    top: 0;
}

.navbar-content a:hover {
    color: #b81d21;
    text-decoration: underline;
    text-decoration-thickness: 0.2rem;
    text-underline-offset: 0.3rem;
}

.navbar-button-donate {
    background-color: #cd1120;
}


/************************
 *    FLEX CONTAINER    *
 *    (hero & intro)    *
 ************************/
.flex-container {
    max-width: var(--max-content-width);

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 9rem;

    /* Top 8.8rem (header + navbar), l/r auto [centered], 4.5rem (72px) before cards */
    /* TODO: Consider overhaul for percentage (or similar); mobile margin is much smaller */
    margin: 8.8rem auto 4.5rem;
}


/**************
 *    HERO    *
 **************/
/* TODO: Look into how I can crop image if it scales beyond viewport */
.hero-bg {
    position: absolute;
    z-index: -1;
    /* 1.8rem header + 7rem navbar */
    top: 8.8rem;
}

.hero-container {
    color: white;

    align-self: start;
    margin-left: 3rem;

    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.hero-title {
    font-size: var(--fs-lg);
}

.hero-buttons {
    display: flex;
    gap: 1rem;
}

.hero-button-learn {
    background-color: #202020;
}

.hero-button-join {
    background-color: #cd1120;
}


/***************
 *    INTRO    *
 ***************/
.intro-container {
    color: white;
    font-size: var(--fs-md);
    text-align: center;

    background-color: #202020;

    display: flex;
    flex-direction: column;
    gap: 2em;

    padding: 4rem 12rem;

    border-radius: 24px;
}

/* Scaling breakpoints */
@media (max-width: 76rem) {
    .intro-container {
        margin: 0 1rem;
    }
}

@media (max-width: 64rem) {
    .intro-container {
        padding: 4rem 8rem;
    }
}

@media (max-width: 50rem) {
    .intro-container {
        padding: 4rem 4rem;
    }
}

.intro-title {
    font-size: var(--fs-lg);
}

.intro-link, .card-link {
    position: relative;

    color: white;
    font-weight: bold;
    text-decoration: underline;
}

.intro-link::after, .card-link::after {
    position: absolute;
    margin-left: 0.5em;

    content: "\27A4";

    text-decoration: none;
}

.intro-link::after {
    color: #b81d21;
}


/***************
 *    CARDS    *
 ***************/
.card-container {
    /* 1980px / 16 = 123.75, scale up*/
    max-width: 124rem;

    display: flex;
    flex-wrap: wrap;
    justify-content: center;

    margin: 0 auto;

    /* TODO: Flexbox isn't aware of its children wrapping and as such may be wider than its children,
         bringing the border/box-shadow along with it. */
    border-bottom: 5px solid white;
    box-shadow: 0 20px 27px -27px;
}

/* TODO: Consider converting to rem (while keeping background scale in mind) */
.card {
    max-width: 862px;
    /* TODO: May need to implement a fallback if supporting legacy browsers, only became widely supported in 2021 */
    /* https://developer.mozilla.org/en-US/docs/Web/CSS/Reference/Properties/aspect-ratio#browser_compatibility */
    aspect-ratio: 3/2;

    padding: 4rem;

    font-size: var(--fs-md);
    color: white;
    text-align: center;

    display: flex;
    /* TODO Comment describing AR calculations
         862/1.5 = 574.66, round down. 3/1.5 = 2, so 3:2. But why? And why 862px? */
    flex-basis: 574px;
    flex-grow: 1;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;

    background-repeat: no-repeat;
    background-size: cover;
}

.card-members {
    background-image: url("assets/img/card-members.png");
}

.card-grants {
    background-image: url("assets/img/card-grants.png");
}

.card-icon {
    width: 160px;
    height: 120px;

    pointer-events: none;
}

.card-title-primary {
    font-size: var(--fs-lg);
    font-weight: bold;
}

.card-title-secondary {
    font-style: italic;
}


/********************
 *    SUPPORTERS    *
 ********************/
.supporter-container {
    max-width: 80rem;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;

    margin: 5rem auto;
    padding: 0 1rem;
}

.supporter-header-primary {
    font-size: var(--fs-lg);
    text-align: center;
    /* Prevents underline pseudo-element from overlapping other text */
    /* TODO: Can I somehow include the pseudo-element in the calculation of line height, so that it's more 'even' when wrapped? */
    line-height: 1.5em;
}

.supporter-header-secondary {
    font-size: var(--fs-md);
    text-align: center;
}

/* TODO: Center-align at narrow widths */
.supporter-logo-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: 3rem;
}

.supporter-logo-container img {
    max-height: 150px;
    width: auto;
}

